# kalshi

./: .gitignore  AGENTS.md  EDGE_VALIDATION.md  KALSHI_API_CONTRACT.md  README.md  commands.md  find_active_markets.py  pyproject.toml
docs/: PHASE_A_VALIDATION.md  PHASE_B_VALIDATION.md  PRODUCTION_REDESIGN_PLAN.md  REDESIGN_DECISIONS_LOG.md  kalshi_market_schema_notes.md  live_runbook.md  live_system_plan.md  trading_improvement_priorities.md
infra/: docker-compose.phase-a.yml
legacy/: refresh_all.sh
scripts/: compute_kalshi_edges.py  dump_market_keys.py  inspect_dlq.py  kalshi_smoke_test.py  live_stack.sh  migrate_once.py  phase_a_infra_down.sh  phase_a_infra_up.sh  poll_kalshi_quotes.py  refresh_all.sh  refresh_btc_markets.py  refresh_kalshi_contracts.py  refresh_kalshi_settlements.py  report_execution_daily.py  report_model_performance.py  report_open_shadow_positions.py  run_live_edges.py  run_live_stack.py  run_opportunity_loop.py  run_paper_execution.py  run_persistence_service.py  scan_btc_markets.py  score_edge_snapshots.py  setup_jetstream_streams.py  smoke_kalshi_pipeline.py  stream_kalshi_quotes_ws.py
tests/: test_coinbase_parse.py  test_coinbase_summary_log.py  test_collector_coinbase_mock.py  test_collector_kalshi_mock.py  test_collector_smoke.py  test_db_downgrade_guard.py  test_db_version.py  test_edge_engine.py  test_edge_math.py  test_edge_snapshot_dao.py  test_edge_snapshot_scoring.py  test_edge_state_engine.py  test_event_contracts.py  test_events_bus.py  test_events_jsonl_sink.py  test_events_models.py  test_events_publisher.py  test_fees.py  (+20 more)
(+82 files in other folders)
