[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kalshi-btc-threshold-trader"
version = "0.0.1"
description = "Kalshi BTC Threshold Trader"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
dependencies = [
  "pydantic==2.7.4",
  "python-dotenv==1.0.1",
  "aiosqlite==0.20.0",
  "rich==13.7.1",
  "websockets==12.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.2",
  "ruff==0.4.10",
  "mypy==1.10.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"kalshi_bot.data" = ["schema.sql"]
"kalshi_bot.data.migrations" = ["*.sql"]
